--- a/stats/index.html
+++ b/stats/index.html
@@ -12,99 +12,111 @@
 <script type="text/javascript" src="main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
-	<h1>February 2024</h1>
-	<h2><a href="archive/jan24.html">January's Stats are also avaliable HERE</a></h2>
-<img src="../assets/feb24.png" alt="Chart Unavailable"/>
+	<h1>March 2024</h1>
+<img src="../assets/mar24.png" alt="Chart Unavailable"/>
+<div class="container">
+	<div class="chat-stats">
 <h2>Detailed chat stats</h2>
+<h5>A stream during this time period was still ongoing after the end of the month. Chat messages from then on have been truncated and will count toward the following months statistics</h5>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
 <ol>
-<li>Phantomspower: 1123 messages</li>
-<li>Streamlabs: 816 messages</li>
-<li>AKIBA212: 671 messages</li>
-<li>OfficiallySp: 597 messages</li>
-<li>minoarno: 570 messages</li>
-<li>Buildingbob345: 513 messages</li>
-<li>ItsChrisyBaby: 461 messages</li>
-<li>Knight1y: 372 messages</li>
-<li>AngleGabriel__: 326 messages</li>
-<li>Matt_Eversman: 305 messages</li>
-<li>ChiSkillz: 270 messages</li>
-<li>CezarNorge: 261 messages</li>
-<li>ObliviosaOfficial: 238 messages</li>
-<li>FaTtYShOw: 225 messages</li>
-<li>OSFrog: 205 messages</li>
-<li>TheOneAndOnlyDo_: 204 messages</li>
-<li>RD07x__: 182 messages</li>
-<li>extremedolphins: 177 messages</li>
-<li>SirJester2: 156 messages</li>
-<li>Nightbot: 149 messages</li>
-<li>PrizeGottiGaming: 143 messages</li>
-<li>MrXadion: 139 messages</li>
-<li>emilauss: 137 messages</li>
-<li>toxic_fusions1: 134 messages</li>
-<li>starstruck: 126 messages</li>
-<li>KingCobraDK and sammziee: 121 messages each</li>
-<li>FeiTFR and Janooobi: 120 messages each</li>
-<li>LowlifePrincessx: 114 messages</li>
-<li>OKAYBLAST: 113 messages</li>
-<li>firesaffron: 98 messages</li>
-<li>NakeyKingKlaus: 94 messages</li>
-<li>ysavibe: 93 messages</li>
-<li>Thicc_Loaf: 81 messages</li>
-<li>VelvetGeisha: 78 messages</li>
-<li>BigBangRay: 76 messages</li>
-<li>PlayWithViewersBot: 75 messages</li>
-<li>unseenmadnez and Dordin: 74 messages each</li>
-<li>BigDog_Q: 70 messages</li>
-<li>Magiic_Carpet: 69 messages</li>
-<li>robbiehammo99: 61 messages</li>
-<li>oemsked and JustSknow: 60 messages each</li>
-<li>StreamElements and thetanpineapple: 57 messages each</li>
-<li>ayvottv: 50 messages</li>
-<li>YellowFlashA9: 49 messages</li>
-<li>Defeatss: 45 messages</li>
-<li>sentimentaltrooper, Rhyer25 and chiefbeef1234: 44 messages each</li>
-<li>sergmist97, DrDerpalot and MisterYashi: 41 messages each</li>
-<li>slawtergg: 36 messages</li>
-<li>PandiPeruvi, edu2002pa and JoshuaMbh: 35 messages each</li>
-<li>Omarpapajo: 34 messages</li>
-<li>andinis: 33 messages</li>
-<li>apexblimund: 31 messages</li>
-<li>MoonlitAly and JDGhosted: 30 messages each</li>
-<li>Djbeight: 29 messages</li>
-<li>SCT_samurai: 28 messages</li>
-<li>Merz_IP: 27 messages</li>
-<li>MaicoMolo: 26 messages</li>
-<li>BeholdBrooke, MeshThaa, Seycross and trixie9th: 25 messages each</li>
-<li>mettee_, Blackl0ud and fairypuella: 24 messages each</li>
-<li>monitor4821 and borednbothered: 23 messages each</li>
-<li>xxpoohdaddyxx: 22 messages</li>
-<li>alericocoooo and bigpapimonsterdragon: 21 messages each</li>
-<li>ShhSierra: 20 messages</li>
-<li>aclcgrimreever, WilliamPoggers and jordanslither: 19 messages each</li>
-<li>riseshin3: 18 messages</li>
-<li>LowlifePrincex, BigTiddyGoff_, Flash_INK and zoro19856442: 17 messages each</li>
-<li>Genghiss, Xylais and EnigmaXVI: 16 messages each</li>
-<li>TheRealMrHaXx, natsusamo and cgabrielthefirst: 15 messages each</li>
-<li>metajezza and LionelNessie_: 14 messages each</li>
-<li>Yorubiya, Plamenov and ChefCurryGames: 13 messages each</li>
-<li>ograven1, midlane_enthusiast, NoVaCk_3893, sunflowersabyss and TheJukus: 12 messages each</li>
-<li>DJFrankieB, IcyUK, partydogftw, maginkaa, trixiethealien and demacia14: 11 messages each</li>
-<li>firefistgrogu, Bianclana, Tjorbjorn and STARJEFFREY64: 10 messages each</li>
-<li>alecspursa, justice2k1_, Phytos11, scarlettnguyen and CosmicTurtle2788: 9 messages each</li>
-<li>Denjiiio, dropkickedJake, kp923589, Habutoo, lingleebao, mikeyuchiha, BigOleRock, HAZE21FY and kozyoffline: 8 messages each</li>
-<li>rxempire, xKanbar, god_sword_dung, Raidek, crovvttv and shout_max: 7 messages each</li>
-<li>BombasticSly, Dread42, Teentitans333, jmjanu, icecoldk94, solkian, SonglistBot, JoesLWorld, AttemptHouse, girldon and murderbirdexpress: 6 messages each</li>
-<li>imperialninja, costi555, destroyerjaan, coupleofstickers, Katana1988, deadkid54 and transloucent_: 5 messages each</li>
-<li>thvjjh2110, TheSweetSniper, Blurrp, theclawsaremine, dali_khe, justloliehh, yangsunny, Mosrix, mrs_cattipiller, KI113RWOLF117, ItsCynda and saiefe: 4 messages each</li>
-<li>XervierYo, shushan_tank, harishm06, S4mantaSuaAnta, YaDudeBryan, Mana248, ChonkyChocobo, burtly, WD40PyRO, kount_kai, Irratix, MagnoliaBobatry, withinaccent, ShauncastGaming, junkmemes, darkkyber1, AnAnonymousGifter and WacKGLooNy: 3 messages each</li>
-<li>danieljonker911, ZsoltiiB, ToxicSecretS, Neidorii, itsbriannalawnya, TheUncommonLoon, Gorran_, ArcusFata, HappyAxedents, ATEL0PHOBlA, mosesconspiracy, xxblueshellxx, cezk0s, Memlil0, golam159, empi6996, amazing_fansss_, VoyagerDecoded, Bluejay_Trax and AYoACrow: 2 messages each</li>
-<li>Ronsou, cloudmind_helpingway, Heat_XD, RisingSalt, savaarus, PatchedProphet, SleepySeal_, thatguyyung, unluckyskeleton, designerskyline_, Wander_VT, MommaMouseChaos, gerwini, yetti_sn, jassmintt, yoriekasan, Hristo4Life, gitmolol, fbdbjrhrhbtjjdjjj, Lavs_Died, mikey98123, WordOfJesus, Soleater_, basicryanx, phoso_fish, nutartine, 繁星若塵, WhyHer, imadiaperedpanda, denkata18, xx_geralt_xx, TheCozmicOne, ramyv9, RPFletch, Swim__Shady_, FrankDenif, nestor_lol7, CruceA, fallendriver, Sjdjhdwker, Moshinery, ojkers3, TheRealVilain, makaveli1022, alexander_69169, foREVerA7X87, mama_mobi, BigTexYeeYeeHenry, Purrls, SoundAlerts, 4nthemz, nabadazz, canadian_tom123, oreo_1129 and friendlypersonnotbooter3: 1 messages each</li>
+<li>Phantomspower: 1829 messages</li>
+<li>FleurDeLocean: 1315 messages</li>
+<li><mark>ObliviosaOfficial</mark>: 1294 messages</li>
+<li>OfficiallySp: 1200 messages</li>
+<li>Streamlabs: 1000 messages</li>
+<li>FaTtYShOw: 971 messages</li>
+<li>ItsChrisyBaby: 967 messages</li>
+<li>minoarno: 949 messages</li>
+<li>Knight1y: 835 messages</li>
+<li>AKIBA212: 547 messages</li>
+<li>defeatss: 494 messages</li>
+<li>extremedolphins: 474 messages</li>
+<li>TheOneAndOnlyDo_: 468 messages</li>
+<li>LowlifePrincessx: 365 messages</li>
+<li>AlexVonPog: 308 messages</li>
+<li>firesaffron: 289 messages</li>
+<li>KingCobraDK: 275 messages</li>
+<li>MrXadion: 274 messages</li>
+<li>OSFrog: 248 messages</li>
+<li>Nightbot: 221 messages</li>
+<li>RD07x__: 219 messages</li>
+<li>The_VGC: 168 messages</li>
+<li>crovvttv: 145 messages</li>
+<li>Janooobi: 144 messages</li>
+<li>alericocoooo: 139 messages</li>
+<li>kotaro_123456: 135 messages</li>
+<li>PandiPeruvi: 130 messages</li>
+<li>emilauss: 123 messages</li>
+<li>StreamElements: 122 messages</li>
+<li>BunnyHugger: 121 messages</li>
+<li>WizeBot: 119 messages</li>
+<li>Buildingbob345: 117 messages</li>
+<li>SirJester2: 106 messages</li>
+<li>shi_lo: 105 messages</li>
+<li>BeaniesbroPoE: 104 messages</li>
+<li>PrizeGottiGaming: 99 messages</li>
+<li>Neidorii and CezarNorge: 98 messages each</li>
+<li>ayvottv: 94 messages</li>
+<li>MisterYashi: 93 messages</li>
+<li>BigOleRock and YellowFlashA9: 86 messages each</li>
+<li>AngleGabriel__: 85 messages</li>
+<li>mettee_: 83 messages</li>
+<li>Merz_IP and sammziee: 72 messages each</li>
+<li>SCT_samurai: 70 messages</li>
+<li>Matt_Eversman: 66 messages</li>
+<li>twotwo_o99: 63 messages</li>
+<li>Blackl0ud: 58 messages</li>
+<li>OKAYBLAST: 56 messages</li>
+<li>Lavs_Died: 54 messages</li>
+<li>chiefbeef1234 and BigDog_Q: 53 messages each</li>
+<li>edu2002pa and Seycross: 49 messages each</li>
+<li>partydogftw and maginkaa: 46 messages each</li>
+<li>Angry_Misfortune: 45 messages</li>
+<li>oemsked: 44 messages</li>
+<li>ChefCurryGames, jtdyaniforest and NoVaCk_3893: 43 messages each</li>
+<li>VelvetGeisha: 42 messages</li>
+<li>shyuwugirl and justloliehh: 40 messages each</li>
+<li>PlayWithViewersBot: 37 messages</li>
+<li>TheJukus, brightside_ofthemoon and NakeyKingKlaus: 35 messages each</li>
+<li>sentimentaltrooper and Rhyer25: 34 messages each</li>
+<li>JoshuaMbh: 33 messages</li>
+<li>Omarpapajo: 32 messages</li>
+<li>borednbothered, aclcgrimreever and willzystreams: 31 messages each</li>
+<li>cgabrielthefirst: 30 messages</li>
+<li>sergmist97: 29 messages</li>
+<li>toxic_fusions1, TheRealMrHaXx and MaicoMolo: 28 messages each</li>
+<li>MoonlitAly and ohhTsumi: 24 messages each</li>
+<li>Ella_Katherina and thetanpineapple: 23 messages each</li>
+<li>wavyzfps, firefistgrogu, transloucent_ and Cerberus6320: 22 messages each</li>
+<li>himel_mahmud and AttemptHouse: 21 messages each</li>
+<li>kochanizi and Magiic_Carpet: 20 messages each</li>
+<li>ograven1, Thicc_Loaf and Xylais: 19 messages each</li>
+<li>IcyUK, brianstar90 and ChiSkillz: 18 messages each</li>
+<li>LionelNessie_, soSwifts, justice2k1_, Swim__Shady_ and 16bitSteven: 17 messages each</li>
+<li>Plamenov, naruto9494 and Dordin: 16 messages each</li>
+<li>MagnoliaBobatry and sh0shin_: 15 messages each</li>
+<li>Talion_Oswald, StrictlyNein, FeiTFR and WilliamPoggers: 14 messages each</li>
+<li>ZsoltiiB and god_sword_dung: 13 messages each</li>
+<li>MeshThaa, ArcusFata, S0NNYMCLEOD, girldon, xxpoohdaddyxx and reesfleming1992: 12 messages each</li>
+<li>auspicious_jiu, deadkid54, Aryxng, Habutoo, midlane_enthusiast and Dread42: 11 messages each</li>
+<li>gutentagwiegehtes: 10 messages</li>
+<li>RythonDev: 9 messages</li>
+<li>Melancholivia, FreakinTrips, crimson_yogurt, Denjiiio, Eltareal and natsusamo: 8 messages each</li>
+<li>Genghiss, ghostgirlstorm, SonglistBot, imperialninja, tornikegeorgia, BeholdBrooke, nutartine, TheAppleOfTheEarth and EchoInSpace: 7 messages each</li>
+<li>nakennille90, mikey98123, Frozen_tt, BruvlyBoii, andinis, NRGmason48_, eshkety, SwedenOfficial and timmyjuul: 6 messages each</li>
+<li>damaggeeeeee, ysavibe, miku625, alecspursa, BigBangRay, DJFrankieB, getnerfedas, cybers1acker, haileyyy333, lelequeen13, omnitempest, Inde12, dali_khe, robbiehammo99 and DD_enkeli: 5 messages each</li>
+<li>AnAnonymousGifter, Valojuer, Bianclana, GarlicBreeead, theclawsaremine, Eyes_Odin and Saahibul123: 4 messages each</li>
+<li>kaczor_ek, crushed_crab, V1perino, jmjanu, JDGhosted, dimakraicer, CotayBay and riseshin3: 3 messages each</li>
+<li>SweGr7, InferneoXD, THEB00STEDKID, Im_ChrisStark, HappyAxedents, ChonkyChocobo, TunaTina, CoraBrown6897, auggiefresh, savssamiko, theonewhy, hyst3ria0, FpsMegaa, goochmane83, dmx6996, CaNaDiAn_Retr0, omar69u, bbbbb41, Pykeachoo, spookynellie, asurikae, Foxxyontherun, DinoDisaster, oreo_1129, Harifff, toritorqui_03 and ToxicSecretS: 2 messages each</li>
+<li>DaGrimmReaperGG, tcashmere, venial__sin, WirtyDords92, hayleysunn, Mosrix, machspeed31, ShadySceptile88, ShauncastGaming, stuartkeylock793, giftsub_collector, LuCiuZ_, DustbunnyBustdunny, Fossabot, CookieLemons, dartgoblin07, mr_zonic__, yogesh2456, edromendes, nembyy, firashamemi2, Irratix, Camdiddycamz, mistborn_1, cibiose, XtremVAL, Phytos11, Swuzzle, vikinglocky, iswimwithsharks, trixie9th, c0llinc0bra, SuperSupportEli, KylarFi, healthierboot, barnesemma1146, teddyisofficial_ and EnigmaXVI: 1 messages each</li>
 </ol>
-		<h4>12422 Total messages Logged from 259 Chat Participants over 11 Streams</h4>
+</div>
+</div>
+<h4>19961 Total messages Logged from 249 Chat Participants over 20 Streams</h4>
     <footer>
         <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
-        <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2024)</p>
+        <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023-2024)</p>
     </footer>
 </body>
 </html>
