--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -28,11 +28,12 @@
             <div class="dropdown">
                 <a href="#archive">Archives</a>
                 <div class="dropdown-content">
-                    <a href="/stats/archive/oct23.html">October 2023</a>
-					<a href="/stats/archive/nov23.html">November 2023</a>
-					<a href="/stats/archive/dec23.html">December 2023</a>
-					<a href="/stats/archive/jan24.html">January 2024</a>
+					<a href="/stats/archive/mar24.html">March 2024</a>
 					<a href="/stats/archive/feb24.html">February 2024</a>
+					<a href="/stats/archive/jan24.html">January 2024</a>
+					<a href="/stats/archive/dec23.html">December 2023</a>
+					<a href="/stats/archive/nov23.html">November 2023</a>
+                    <a href="/stats/archive/oct23.html">October 2023</a>
                 </div>
             </div>
             <div class="dropdown">
