--- a/stats/index.html
+++ b/stats/index.html
@@ -12,7 +12,8 @@
 <script type="text/javascript" src="main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
-	<h1>March 2024</h1>
+	<h1>March 2024 (Updated)</h1>
+	<h3>Stats were incorrectly processed. These have now been fixed.</h3>
 <img src="../assets/mar24.png" alt="Chart Unavailable"/>
 <div class="container">
 	<div class="chat-stats">
