--- a/tracker.html
+++ b/tracker.html
@@ -68,7 +68,7 @@
 
 <div class="container">
     <h1><strong>Obliviosa Backcat Video Tracker</strong></h1>
-	<h4>Last Update: 27/03/2024 @ 5:10PM GMT</h4>
+	<h4>Last Update: 02/04/2024 @ 7:49PM GMT</h4>
 	<div class="task">
 	  <h2>Song Of Nunu</h2>
 	  <h3>3 VODS - 4/? Videos</h3>
@@ -89,6 +89,7 @@
     <div class="task">
         <h2>Dead Island 2</h2>
 		<h3>IN PROGRESS - ?/? Videos</h3>
+        <div class="none"></div>
         <div class="none"></div>
     </div>
     <div class="task">
