--- a/tracker.html
+++ b/tracker.html
@@ -68,7 +68,7 @@
 
 <div class="container">
     <h1><strong>Obliviosa Backcat Video Tracker</strong></h1>
-	<h4>Last Update: 02/04/2024 @ 7:49PM GMT</h4>
+	<h4>Last Update: 17/04/2024</h4>
 	<div class="task">
 	  <h2>Song Of Nunu</h2>
 	  <h3>3 VODS - 4/? Videos</h3>
@@ -78,7 +78,7 @@
   </div>
 <div class="task">
     <h2>It Takes Two</h2>
-		<h3>IN PROGRESS - ?/? Videos</h3>
+		<h3>5 VODS - ?/? Videos</h3>
         <div class="none"></div>
         <div class="none"></div>
         <div class="none"></div>
@@ -89,10 +89,16 @@
     <div class="task">
         <h2>Dead Island 2</h2>
 		<h3>IN PROGRESS - ?/? Videos</h3>
+        <div class="progress"></div>
         <div class="none"></div>
         <div class="none"></div>
     </div>
     <div class="task">
+        <h2>Hollow Knight</h2>
+		<h3>IN PROGRESS - ?/? Videos</h3>
+        <div class="none"></div>
+    </div>
+  <div class="task">
         <h2>Stray</h2>
 		<h3>16 VODS - ?/? Videos</h3>
         <div class="progress"></div>
