--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -40,6 +40,7 @@
             <div class="dropdown">
                 <a href="#special-events">Special Events</a>
                 <div class="dropdown-content">
+                    <a href="/stats/event/3year.html">3 Year Anniversary Subathon 2024</a>
                     <a href="/stats/event/ss2023.html">Subtember Subathon 2023</a>
                 </div>
             </div>
