--- a/stats/index.html
+++ b/stats/index.html
@@ -13,6 +13,7 @@
 <body>
 	<div id="navbar-placeholder"></div>
 	<h1>Obliviosa 3 Year Subathon</h1>
+<a href="trans/3year.html"><h2>See chat transcript here</h2></a>
 <img src="../assets/liv3yearchat.png" alt="Chart Unavailable"/>
 <div class="container">
 	<div class="chat-stats">
