--- a/stats/event/3year.html
+++ b/stats/event/3year.html
@@ -12,122 +12,84 @@
 <script type="text/javascript" src="../main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
-	<h1>April 2024</h1>
-<img src="../../assets/apr24.png" alt="Chart Unavailable"/>
+	<h1>Obliviosa 3 Year Subathon</h1>
+<a href="trans/3year.html"><h2>See chat transcript here</h2></a>
+<img src="../../assets/liv3yearchat.png" alt="Chart Unavailable"/>
 <div class="container">
 	<div class="chat-stats">
 <h2>Detailed chat stats</h2>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
 <ol>
-<li>ItsChrisyBaby: 1902 messages</li>
-<li>Phantomspower: 1842 messages</li>
-<li>shyuwugirl: 1134 messages</li>
-<li>kotaro_123456: 1077 messages</li>
-<li>Streamlabs: 923 messages</li>
-<li>ObliviosaOfficial: 919 messages</li>
-<li>OfficiallySp: 786 messages</li>
-<li>TheOneAndOnlyDo_: 679 messages</li>
-<li>FaTtYShOw: 641 messages</li>
-<li>Knight1y: 637 messages</li>
-<li>AngleGabriel__: 621 messages</li>
-<li>minoarno: 615 messages</li>
-<li>MrXadion: 580 messages</li>
-<li>VelvetGeisha: 543 messages</li>
-<li>Irratix: 525 messages</li>
-<li>LowlifePrincessx: 421 messages</li>
-<li>Magiic_Carpet: 388 messages</li>
-<li>firesaffron: 363 messages</li>
-<li>PandiPeruvi: 334 messages</li>
-<li>Nightbot: 284 messages</li>
-<li>WizeBot: 282 messages</li>
-<li>FleurDeLocean: 279 messages</li>
-<li>OSFrog: 261 messages</li>
-<li>AKIBA212: 256 messages</li>
-<li>alericocoooo: 244 messages</li>
-<li>oemsked: 227 messages</li>
-<li>extremedolphins: 210 messages</li>
-<li>CezarNorge: 189 messages</li>
-<li>emilauss: 188 messages</li>
-<li>HelloWearyTravelers: 185 messages</li>
-<li>StreamElements: 149 messages</li>
-<li>Buildingbob345: 141 messages</li>
-<li>ChiSkillz: 138 messages</li>
-<li>YellowFlashA9: 134 messages</li>
-<li>Nymphaliia and twotwo_o99: 132 messages each</li>
-<li>NeoryZz: 130 messages</li>
-<li>Habuzaki: 124 messages</li>
-<li>AlexVonPog: 119 messages</li>
-<li>Furido_: 110 messages</li>
-<li>chiefbeef1234 and Blackl0ud: 105 messages each</li>
-<li>Theonemanny and PlayWithViewersBot: 103 messages each</li>
-<li>sammziee: 98 messages</li>
-<li>SirJester2: 92 messages</li>
-<li>demon_cricketer: 88 messages</li>
-<li>JumpFartSniff: 84 messages</li>
-<li>escaargot and Bulbathulu: 83 messages each</li>
-<li>ayvottv: 81 messages</li>
-<li>kittykitsche: 80 messages</li>
-<li>PrizeGottiGaming: 79 messages</li>
-<li>Blurrp: 76 messages</li>
-<li>borednbothered: 72 messages</li>
-<li>justice2k1_: 70 messages</li>
-<li>BigDog_Q: 68 messages</li>
-<li>defeatss: 67 messages</li>
-<li>KingCobraDK and sentimentaltrooper: 66 messages each</li>
-<li>crovvttv: 59 messages</li>
-<li>Rhyer25: 58 messages</li>
-<li>Its_Mr_Mackerel: 51 messages</li>
-<li>XervierYo, LionelNessie_ and DocHume: 50 messages each</li>
-<li>BeaniesbroPoE: 49 messages</li>
-<li>remskz and fetchthepony: 46 messages each</li>
-<li>BigBangRay and NoVaCk_3893: 44 messages each</li>
-<li>notieyoudie: 42 messages</li>
-<li>nakennille90: 41 messages</li>
-<li>ElMundoDeHades: 40 messages</li>
-<li>Xylais: 39 messages</li>
-<li>LordRuyn: 37 messages</li>
-<li>ohhTsumi and RD07x__: 35 messages each</li>
-<li>StrictlyNein: 34 messages</li>
-<li>thetanpineapple and keyon45c: 33 messages each</li>
-<li>twitchlolotv, solkian and aclcgrimreever: 32 messages each</li>
-<li>Genghiss and ImNasusMain: 31 messages each</li>
-<li>Plamenov: 30 messages</li>
-<li>TheJukus: 29 messages</li>
-<li>biruudongker and ChonkyChocobo: 28 messages each</li>
-<li>dusancosic: 27 messages</li>
-<li>Janooobi, Daave____ and MagnoliaBobatry: 26 messages each</li>
-<li>andinis, MoonlitAly, Bianclana and Neidorii: 25 messages each</li>
-<li>justloliehh, ograven1 and FeiTFR: 24 messages each</li>
-<li>Rose1009: 23 messages</li>
-<li>reedtrullz and soussoukem: 22 messages each</li>
-<li>chanjoliie, D_W_James and MaicoMolo: 21 messages each</li>
-<li>asurikae and OpiumPhoenix: 20 messages each</li>
-<li>toxic_fusions1, KING_HAMMER, damaggeeeeee and monitor4821: 19 messages each</li>
-<li>dali_khe, teddyisofficial_ and jxst_sam_: 18 messages each</li>
-<li>Porcelain_Ghoul, V1perino and whitethienpoison: 17 messages each</li>
-<li>farcry111, BigOleRock, jtdyaniforest, The_VGC, gamergirlqc1 and saiefe: 16 messages each</li>
-<li>TheLittleZee and Omarpapajo: 15 messages each</li>
-<li>innasolo, JoshuaMbh, JustSknow, hrhkoolsbart, brianstar90, LilacIsPurple and RogueJelly2: 14 messages each</li>
-<li>kotaro_12345, OKAYBLAST, LiaAnnie, MeshThaa, gutentagwiegehtes and JustDrawCats: 13 messages each</li>
-<li>TheRealMrHaXx, shi_lo, coldidlier and Thicc_Loaf: 12 messages each</li>
-<li>cammain, papayahzz, ultramegafinalemployee, River_39 and bbadmonkey: 11 messages each</li>
-<li>iblue_rose, Raidek, Robinio, mettee_, Nick_Is_Here_Hat, DPDLC, smoke_em_all and deadkid54: 10 messages each</li>
-<li>NorbyDecibel, partydogftw, Habutoo, LiTTY_L0V3, Laeriis and katperson248: 9 messages each</li>
-<li>theclawsaremine, eribears, zKreo_ and livytaskbot: 8 messages each</li>
-<li>KaviiScar, Tsunderei, omar69u, robbiehammo99, kaanyavuz1, alipha87 and Yorubiya: 7 messages each</li>
-<li>ZizouT1, kount_kai, peanutbutterisgood432, itzrezz12, c0llinc0bra, cocofish41, xxpoohdaddyxx, ChefCurryGames, crimson_yogurt, CapabilityIsBack, ryzcq and metal_deathclaw: 6 messages each</li>
-<li>heyjoe4270, WaterBearDM, edu2002pa, sllen1, AttemptHouse, arylunae, UnforseenSin, BullyofSmeg, MajinXChu, JDGhosted, Lacal, cgabrielthefirst, NRGmason48_, CorgoTron, Scrimitzu, Mosrix, natsusamo and imperialninja: 5 messages each</li>
-<li>airrunkle, CharzDev, ItsMeHilaal, BattleBunnyVayne, RecklessVely, CanisLupusFilius, spevahr, KalleBum, zodarian7, slappa_biscuit, LeoOmran, DJFrankieB, starstruck, oreo_1129, Whitecrown, tihi91, JPStudyTime and Trepko: 4 messages each</li>
-<li>Sanforaa, SonglistBot, OMJess, DrDerpalot, Naydra_Nori, MacHeimler, KylarFi, ItzKorigo, HolySaint_X, slayiercipher, swagger2323, philpips, Sublime, transloucent_, ExitiumNL, HappyAxedents, jiaove, ufcisycis7cysid, ToxicSecretS, Roox0n, AvaaG, kochanizi and l1o1stc00l: 3 messages each</li>
-<li>yippebug, Ella_Katherina, Talion_Oswald, creamcheesebagelboy, Tekenis_, Lavs_Died, ddbergh, kagamix18, ImTheRealDeal43, machspeed31, alpha912, xx_geralt_xx, szybkimiki1312, tornikegeorgia, MateoSnerry, Cyrid5, dmx6996, kegluneq1103, 4str0bl1nk, Angry_Misfortune, WirtyDords92, RobbenDaMan, nexus0wls, voldymort_supersaiyanazn, theonewhy, xoAlkali, cutting_person, EnigmaXVI, germanyww1 and sixgawd026: 2 messages each</li>
-<li>WhyMango69, SweetTamales, d34dlyk1tt3n90, megaosoh, Cenxion, davide8576, DropsOnTwitter, AnAnonymousGifter, Fossabot, dankbuddhaa, Cathallya, DemiCanPlay, cdi_flix, futurestys, ausab5, ArkaTheWolf, TheSchorr, fichipaldi, mrafandi44, yangsunny, georgiadv, titichat20, muercielaga, RodrigoGaldiano, BruvlyBoii, shinobii__v, WD40PyRO, j_mek_butter, kursk9, JustAskCole, jinkyjonkyjenko, Void_XM147, madzzgamingggggg, CasperApologist, sstupid00, DreSLR, RisingSalt, Trabje, kyecc, Melancholivia, TimoTheGod, James, NatesNoods, mysticginge, Vini_Sensei, El_Miguel_l3, makiftw, Drexb, waelblue, Phabios, David_Kyden, Zaiphion, rainbowsheepbott, pinetwiggy33, VaIerieex, lazy_miro and snacksss321: 1 messages each</li>
+<li>Streamlabs: 350 messages</li>
+<li>OfficiallySp: 302 messages</li>
+<li>ItsChrisyBaby: 242 messages</li>
+<li>extremedolphins: 222 messages</li>
+<li>Knight1y: 187 messages</li>
+<li>AngleGabriel__: 183 messages</li>
+<li>minoarno: 180 messages</li>
+<li>VelvetGeisha: 179 messages</li>
+<li>LowlifePrincessx and Phantomspower: 154 messages each</li>
+<li>Habuzaki: 144 messages</li>
+<li>kotaro_123456: 143 messages</li>
+<li>WizeBot: 127 messages</li>
+<li>OSFrog and PrizeGottiGaming: 123 messages each</li>
+<li>starstruck: 119 messages</li>
+<li>The_VGC: 116 messages</li>
+<li>Rhyer25: 114 messages</li>
+<li>shyuwugirl: 110 messages</li>
+<li>cLubTubeOfficial: 107 messages</li>
+<li>emilauss: 98 messages</li>
+<li>Buildingbob345: 95 messages</li>
+<li>Nightbot: 83 messages</li>
+<li>AKIBA212: 79 messages</li>
+<li>TheOneAndOnlyDo_: 78 messages</li>
+<li>soussoukem: 74 messages</li>
+<li>ObliviosaOfficial: 71 messages</li>
+<li>SirJester2 and Bulbathulu: 69 messages each</li>
+<li>remskz: 68 messages</li>
+<li>nicojvger: 59 messages</li>
+<li>Tjorbjorn: 52 messages</li>
+<li>AlexVonPog: 50 messages</li>
+<li>alericocoooo: 44 messages</li>
+<li>Renths and CezarNorge: 43 messages each</li>
+<li>radcakez: 38 messages</li>
+<li>Magiic_Carpet: 37 messages</li>
+<li>StreamElements: 31 messages</li>
+<li>Theonemanny: 29 messages</li>
+<li>BigDog_Q and PandiPeruvi: 28 messages each</li>
+<li>magic_GR74: 25 messages</li>
+<li>demon_cricketer: 24 messages</li>
+<li>sammziee: 23 messages</li>
+<li>Lilde3on and firesaffron: 22 messages each</li>
+<li>AYoACrow: 21 messages</li>
+<li>Kentagiouz: 20 messages</li>
+<li>transloucent_, saf1 and KingCobraDK: 19 messages each</li>
+<li>dshadow_b and RD07x__: 18 messages each</li>
+<li>PlayWithViewersBot, MoonlitAly and ysavibe: 17 messages each</li>
+<li>justloliehh, borednbothered and lingleebao: 16 messages each</li>
+<li>YellowFlashA9 and WirtyDords92: 15 messages each</li>
+<li>LArcZekai and FleurDeLocean: 14 messages each</li>
+<li>gutentagwiegehtes and YuriNationssssss: 13 messages each</li>
+<li>edu2002pa and Fossabot: 12 messages each</li>
+<li>makiftw and Blackl0ud: 11 messages each</li>
+<li>toxic_fusions1: 10 messages</li>
+<li>Bogusdonuts and MaicoMolo: 9 messages each</li>
+<li>Furido_, whnheavenbreaks, bytesizes, ayvottv, Bianclana and oemsked: 8 messages each</li>
+<li>Trepko, Dordin, NeoryZz, ChiSkillz, willzystreams, AttemptHouse and andinis: 7 messages each</li>
+<li>JustSknow, mercury015, Ateest, nakennille90, J4C0B_F1RY, PoetTreeTV, 1mobymanxd, WOODARD_CHUCKLESON and shi_lo: 6 messages each</li>
+<li>jtdyaniforest, CalcinhaDaMargarida, bigdaddyrikes, Omarpapajo, NymueKitty, kotaro_12345, seajayde, RogueJelly2, grga_aka_chefmorde and Sublime: 5 messages each</li>
+<li>chiefbeef1234, bigsmoke111tupac, Valojuer, natsusamo, ShadySceptile88, Garbdog, saxash07, Arhil120, asurikae, MrXadion and deadkid54: 4 messages each</li>
+<li>melon_minnio_, CaptainGrosCheh, Best_Gameplay4444, solkian, crazy_bro_athene, Irratix, BattleBunnyVayne, ScoobyMods, SnazzyNeonKoala, yvriienova, prissynicky, crovvttv, phoso_fish and hongdingus: 3 messages each</li>
+<li>facetickles, xko987, DJFrankieB, miiiksss, keyon45c, Nanospaggle, Thicc_Loaf, UTKARSH__1, goksenarda, Coldsidedpillows, cresendomoon, patspinky, ShauncastGaming, importedjesus, LionelNessie_, alwayspoppin3, ragnarssr, dannfer317, TheeHuntMusic, 1whocares, robbiehammo99, Nymphaliia, notalexvonpog, ItsMeHilaal, aclcgrimreever and sttino21: 2 messages each</li>
+<li>OpiumPhoenix, DrDerpalot, fad3dprincess, TheRealMrHaXx, nkmd_, Void_XM147, rafmaster12c, cgabrielthefirst, evanthepeepo, Placid4U, MeshThaa, jmjanu, Vegeta100, mettee_, surajquantum, NameWithLetters, Janooobi, innasolo, SoundAlerts, Seycross, nabadazz, elle_brei, Aimbotmxrtin, yasarsalih06, 0xRoM, riseshin3, cammain, sKariXIII, twotwo_o99, SwedenOfficial, Habutoo, HeyItsAnn_, sjavdkdvshdv, Neidorii, ElMundoDeHades, BigBangRay, NatesNoods, gagsrus, valismid, clydobotto, FaTtYShOw, ograven1, notieyoudie, SENSHI_OzoSelmer, teeeda, Phytos11, Oraclethegr8, theclawsaremine, banjo_pancake, DakotaPNW, 俺的名字就叫彦, AndryelWolf, ArgentAglets, crabler, Swuzzle, IAmNotAfk and CotayBay: 1 messages each</li>
 </ol>
 </div>
 </div>
-<h4>23370 Total messages Logged from 332 Chat Participants over 20 Streams</h4>
+<h4>5548 Total messages Logged from 213 Chat Participants</h4>
     <footer>
         <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023-2024)</p>
     </footer>
+index
 </body>
 </html>
