--- a/stats/event/3yearani.html
+++ b/stats/event/3yearani.html
@@ -13,8 +13,8 @@
 <body>
 	<div id="navbar-placeholder"></div>
 	<h1>Obliviosa 3 Year Subathon</h1>
-<a href="trans/3year.html"><h2>See chat transcript here</h2></a>
-<img src="../../assets/liv3yearchat.png" alt="Chart Unavailable"/>
+<a href="trans/3yearani.html"><h2>See chat transcript here</h2></a>
+<img src="../../assets/3yearani.png" alt="Chart Unavailable"/>
 <div class="container">
 	<div class="chat-stats">
 <h2>Detailed chat stats</h2>
