--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -35,12 +35,13 @@
 					<a href="/stats/archive/dec23.html">December 2023</a>
 					<a href="/stats/archive/nov23.html">November 2023</a>
                     <a href="/stats/archive/oct23.html">October 2023</a>
+                    <a href="/stats/archive/sep23.html">September 2023</a>
                 </div>
             </div>
             <div class="dropdown">
                 <a href="#special-events">Special Events</a>
                 <div class="dropdown-content">
-                    <a href="/stats/event/3year.html">3 Year Anniversary Subathon 2024</a>
+                    <a href="/stats/event/3yearani.html">3 Year Anniversary Subathon 2024</a>
                     <a href="/stats/event/ss2023.html">Subtember Subathon 2023</a>
                 </div>
             </div>
