--- a/stats/index.html
+++ b/stats/index.html
@@ -12,80 +12,109 @@
 <script type="text/javascript" src="main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
-	<h1>Obliviosa 3 Year Subathon</h1>
-<a href="trans/3yearani.html"><h2>See chat transcript here</h2></a>
-<img src="../assets/3yearani.png" alt="Chart Unavailable"/>
+	<h1>May 2024</h1>
+<img src="../assets/may24.png" alt="Chart Unavailable"/>
 <div class="container">
 	<div class="chat-stats">
 <h2>Detailed chat stats</h2>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
+	<h4><a href="event/3yearani.html">The stats below include the 3 year anniversary subathon chatstats. Click here to see those statistics seperately</a></h4>
 <ol>
-<li>Streamlabs: 350 messages</li>
-<li>OfficiallySp: 302 messages</li>
-<li>ItsChrisyBaby: 242 messages</li>
-<li>extremedolphins: 222 messages</li>
-<li>Knight1y: 187 messages</li>
-<li>AngleGabriel__: 183 messages</li>
-<li>minoarno: 180 messages</li>
-<li>VelvetGeisha: 179 messages</li>
-<li>LowlifePrincessx and Phantomspower: 154 messages each</li>
-<li>Habuzaki: 144 messages</li>
-<li>kotaro_123456: 143 messages</li>
-<li>WizeBot: 127 messages</li>
-<li>OSFrog and PrizeGottiGaming: 123 messages each</li>
-<li>starstruck: 119 messages</li>
-<li>The_VGC: 116 messages</li>
-<li>Rhyer25: 114 messages</li>
-<li>shyuwugirl: 110 messages</li>
-<li>cLubTubeOfficial: 107 messages</li>
-<li>emilauss: 98 messages</li>
-<li>Buildingbob345: 95 messages</li>
-<li>Nightbot: 83 messages</li>
-<li>AKIBA212: 79 messages</li>
-<li>TheOneAndOnlyDo_: 78 messages</li>
-<li>soussoukem: 74 messages</li>
-<li>ObliviosaOfficial: 71 messages</li>
-<li>SirJester2 and Bulbathulu: 69 messages each</li>
-<li>remskz: 68 messages</li>
-<li>nicojvger: 59 messages</li>
-<li>Tjorbjorn: 52 messages</li>
-<li>AlexVonPog: 50 messages</li>
-<li>alericocoooo: 44 messages</li>
-<li>Renths and CezarNorge: 43 messages each</li>
-<li>radcakez: 38 messages</li>
-<li>Magiic_Carpet: 37 messages</li>
-<li>StreamElements: 31 messages</li>
-<li>Theonemanny: 29 messages</li>
-<li>BigDog_Q and PandiPeruvi: 28 messages each</li>
-<li>magic_GR74: 25 messages</li>
-<li>demon_cricketer: 24 messages</li>
-<li>sammziee: 23 messages</li>
-<li>Lilde3on and firesaffron: 22 messages each</li>
-<li>AYoACrow: 21 messages</li>
-<li>Kentagiouz: 20 messages</li>
-<li>transloucent_, saf1 and KingCobraDK: 19 messages each</li>
-<li>dshadow_b and RD07x__: 18 messages each</li>
-<li>PlayWithViewersBot, MoonlitAly and ysavibe: 17 messages each</li>
-<li>justloliehh, borednbothered and lingleebao: 16 messages each</li>
-<li>YellowFlashA9 and WirtyDords92: 15 messages each</li>
-<li>LArcZekai and FleurDeLocean: 14 messages each</li>
-<li>gutentagwiegehtes and YuriNationssssss: 13 messages each</li>
-<li>edu2002pa and Fossabot: 12 messages each</li>
-<li>makiftw and Blackl0ud: 11 messages each</li>
-<li>toxic_fusions1: 10 messages</li>
-<li>Bogusdonuts and MaicoMolo: 9 messages each</li>
-<li>Furido_, whnheavenbreaks, bytesizes, ayvottv, Bianclana and oemsked: 8 messages each</li>
-<li>Trepko, Dordin, NeoryZz, ChiSkillz, willzystreams, AttemptHouse and andinis: 7 messages each</li>
-<li>JustSknow, mercury015, Ateest, nakennille90, J4C0B_F1RY, PoetTreeTV, 1mobymanxd, WOODARD_CHUCKLESON and shi_lo: 6 messages each</li>
-<li>jtdyaniforest, CalcinhaDaMargarida, bigdaddyrikes, Omarpapajo, NymueKitty, kotaro_12345, seajayde, RogueJelly2, grga_aka_chefmorde and Sublime: 5 messages each</li>
-<li>chiefbeef1234, bigsmoke111tupac, Valojuer, natsusamo, ShadySceptile88, Garbdog, saxash07, Arhil120, asurikae, MrXadion and deadkid54: 4 messages each</li>
-<li>melon_minnio_, CaptainGrosCheh, Best_Gameplay4444, solkian, crazy_bro_athene, Irratix, BattleBunnyVayne, ScoobyMods, SnazzyNeonKoala, yvriienova, prissynicky, crovvttv, phoso_fish and hongdingus: 3 messages each</li>
-<li>facetickles, xko987, DJFrankieB, miiiksss, keyon45c, Nanospaggle, Thicc_Loaf, UTKARSH__1, goksenarda, Coldsidedpillows, cresendomoon, patspinky, ShauncastGaming, importedjesus, LionelNessie_, alwayspoppin3, ragnarssr, dannfer317, TheeHuntMusic, 1whocares, robbiehammo99, Nymphaliia, notalexvonpog, ItsMeHilaal, aclcgrimreever and sttino21: 2 messages each</li>
-<li>OpiumPhoenix, DrDerpalot, fad3dprincess, TheRealMrHaXx, nkmd_, Void_XM147, rafmaster12c, cgabrielthefirst, evanthepeepo, Placid4U, MeshThaa, jmjanu, Vegeta100, mettee_, surajquantum, NameWithLetters, Janooobi, innasolo, SoundAlerts, Seycross, nabadazz, elle_brei, Aimbotmxrtin, yasarsalih06, 0xRoM, riseshin3, cammain, sKariXIII, twotwo_o99, SwedenOfficial, Habutoo, HeyItsAnn_, sjavdkdvshdv, Neidorii, ElMundoDeHades, BigBangRay, NatesNoods, gagsrus, valismid, clydobotto, FaTtYShOw, ograven1, notieyoudie, SENSHI_OzoSelmer, teeeda, Phytos11, Oraclethegr8, theclawsaremine, banjo_pancake, DakotaPNW, 俺的名字就叫彦, AndryelWolf, ArgentAglets, crabler, Swuzzle, IAmNotAfk and CotayBay: 1 messages each</li>
+<li>OfficiallySp: 912 messages</li>
+<li>Phantomspower: 890 messages</li>
+<li>Streamlabs: 880 messages</li>
+<li>ItsChrisyBaby: 783 messages</li>
+<li>kotaro_123456: 701 messages</li>
+<li>actiivxteee: 580 messages</li>
+<li>shyuwugirl: 564 messages</li>
+<li>ObliviosaOfficial: 533 messages</li>
+<li>Knight1y: 499 messages</li>
+<li>AKIBA212: 482 messages</li>
+<li>FaTtYShOw: 476 messages</li>
+<li>minoarno: 384 messages</li>
+<li>LowlifePrincessx: 372 messages</li>
+<li>AngleGabriel__: 369 messages</li>
+<li>VelvetGeisha: 329 messages</li>
+<li>extremedolphins: 307 messages</li>
+<li>MrXadion: 301 messages</li>
+<li>Buildingbob345: 290 messages</li>
+<li>OSFrog: 285 messages</li>
+<li>RD07x__: 243 messages</li>
+<li>CezarNorge: 242 messages</li>
+<li>TheOneAndOnlyDo_: 239 messages</li>
+<li>WizeBot: 217 messages</li>
+<li>Nightbot: 216 messages</li>
+<li>starstruck: 188 messages</li>
+<li>Habuzaki: 184 messages</li>
+<li>PrizeGottiGaming: 181 messages</li>
+<li>emilauss: 178 messages</li>
+<li>Magiic_Carpet: 164 messages</li>
+<li>remskz: 152 messages</li>
+<li>alericocoooo: 149 messages</li>
+<li>Rhyer25: 138 messages</li>
+<li>The_VGC: 120 messages</li>
+<li>cLubTubeOfficial and xko987: 107 messages each</li>
+<li>soussoukem and StreamElements: 104 messages each</li>
+<li>PandiPeruvi and AlexVonPog: 100 messages each</li>
+<li>defeatss: 85 messages</li>
+<li>Bulbathulu: 84 messages</li>
+<li>BigDog_Q: 80 messages</li>
+<li>oemsked: 79 messages</li>
+<li>demon_cricketer: 78 messages</li>
+<li>sammziee: 76 messages</li>
+<li>nicojvger: 73 messages</li>
+<li>chiefbeef1234: 71 messages</li>
+<li>SirJester2: 69 messages</li>
+<li>Theonemanny: 63 messages</li>
+<li>Tjorbjorn: 62 messages</li>
+<li>PlayWithViewersBot and YellowFlashA9: 59 messages each</li>
+<li>bigsmoke111tupac, MaicoMolo and NorbyDecibel: 57 messages each</li>
+<li>Danogtt: 56 messages</li>
+<li>MoonlitAly: 52 messages</li>
+<li>radcakez and crovvttv: 48 messages each</li>
+<li>SpacedGodEis: 46 messages</li>
+<li>xxdeathmemexx364: 45 messages</li>
+<li>Renths: 43 messages</li>
+<li>LionelNessie_ and NeoryZz: 39 messages each</li>
+<li>Blackl0ud: 38 messages</li>
+<li>borednbothered: 37 messages</li>
+<li>itzrezz12: 34 messages</li>
+<li>justice2k1_ and ChiSkillz: 33 messages each</li>
+<li>firesaffron: 31 messages</li>
+<li>Furido_ and whispererPengu: 30 messages each</li>
+<li>Thicc_Loaf: 29 messages</li>
+<li>transloucent_: 28 messages</li>
+<li>toxic_fusions1: 27 messages</li>
+<li>wraspie, i_ThatOneGuy and alone_in_the_dark_bartek3: 26 messages each</li>
+<li>wenbee_ and magic_GR74: 25 messages each</li>
+<li>Lilde3on and gutentagwiegehtes: 24 messages each</li>
+<li>makiftw, FeiTFR and Trepko: 23 messages each</li>
+<li>felix_ets_: 22 messages</li>
+<li>WilliamPoggers and AYoACrow: 21 messages each</li>
+<li>KingCobraDK, MagnoliaBobatry, Kentagiouz and JumpFartSniff: 20 messages each</li>
+<li>ysavibe, c0llinc0bra, saf1 and burtly: 19 messages each</li>
+<li>Seycross and FleurDeLocean: 18 messages each</li>
+<li>BigBangRay and justloliehh: 17 messages each</li>
+<li>lingleebao: 16 messages</li>
+<li>ayvottv, WirtyDords92, Colibrine and DrDerpalot: 15 messages each</li>
+<li>LArcZekai and Irratix: 14 messages each</li>
+<li>edu2002pa, hugedissapointment, TheArtOfMat, IcyUK, brianstar90, YuriNationssssss and Fossabot: 13 messages each</li>
+<li>Daeye, Bianclana, BeaniesbroPoE, JustSknow and shi_lo: 12 messages each</li>
+<li>Paulochon_12, K9s_NA and twotwo_o99: 11 messages each</li>
+<li>cresendomoon, thetanpineapple, FireviperHS and destroyerjaan: 10 messages each</li>
+<li>MisterYashi, Robinio, Bogusdonuts, ShadowOfEnki, Im_Salamander and bander_fg: 9 messages each</li>
+<li>whnheavenbreaks, GanonGorb, TheRealMrHaXx, AceUlquiorra, why_000, ograven1, bytesizes, Nymphaliia and fireviperow: 8 messages each</li>
+<li>ImNasusMain, willzystreams, ram13085, VaIerieex, cgabrielthefirst, Habutoo, AttemptHouse, mikey522839, jessegaming173, andinis, Dordin, robbiehammo99 and fresh_yellowsnow: 7 messages each</li>
+<li>J4C0B_F1RY, deadkid54, Janooobi, johnaxemen, PoetTreeTV, solkian, coupleofstickers, Neidorii, Doctor_Love, bigdaddyrikes, Ateest, WOODARD_CHUCKLESON, egirlw0lf56, H31K4L and mercury015: 6 messages each</li>
+<li>kotaro_12345, TheRealBlankk, CaptainErasmusStorm, grga_aka_chefmorde, MeshThaa, HappyAxedents, omnitempest, Void_XM147, NymueKitty, Denjiiio, RogueJelly2, Sublime, Omarpapajo, fetchthepony, jtdyaniforest, CalcinhaDaMargarida, seajayde, finn171047 and escaargot: 5 messages each</li>
+<li>ShadySceptile88, saxash07, Valojuer, DinoDisaster, Arhil120, Excalamity, asurikae, Garbdog, xx_geralt_xx, Valh1r_, CaptainGrosCheh, Xylais, JDGhosted, entropydreams, Lavs_Died, OKAYBLAST, crypttonn, 木精灵, Plamenov, CruceA, aclcgrimreever, Hiiro_06, theclawsaremine and yangsunny: 4 messages each</li>
+<li>Best_Gameplay4444, melon_minnio_, phoso_fish, crazy_bro_athene, xxpoohdaddyxx, cocofish41, hongdingus, BattleBunnyVayne, ScoobyMods, yvriienova, Housni_02, DJFrankieB, SnazzyNeonKoala, NoVaCk_3893, greebot4000, MrSkullzer and prissynicky: 3 messages each</li>
+<li>SCT_samurai, UTKARSH__1, KingCopes, harvestmymorgussy, spacewaveTV, surajquantum, HolySaint_X, TwitchRin, kingnumbgd, facetickles, goksenarda, ShauncastGaming, atomik_sky62, S1ege79, colibrine_2, Coldsidedpillows, Nanospaggle, swagpoopie, XervierYo, ItsMeHilaal, fleurtje_x, miiiksss, alwayspoppin3, keyon45c, ragnarssr, dannfer317, wagadoogey, patspinky, TheeHuntMusic, 1whocares, sttino21, EnigmaXVI, jacobabyisbestbeardyboi, miggymimosa, rafmaster12c, importedjesus, notalexvonpog and keandre094: 2 messages each</li>
+<li>evanthepeepo, nutartine, Achmadeus, fad3dprincess, CotayBay, K48U70, heyjoe4270, sKariXIII, Placid4U, catnisskat, SoundAlerts, NameWithLetters, samsonite012, Aimbotmxrtin, canand2510, Binkiewink, Vegeta100, gagsrus, Swuzzle, jmjanu, SENSHI_OzoSelmer, teeeda, theonewhy, Phytos11, cammain, IAmNotAfk, nabadazz, nkmd_, mettee_, ToxicSecretS, jommgart, Tsunderei, innasolo, Exzenterr, 0xRoM, OpiumPhoenix, yasarsalih06, JeremElShonen, notieyoudie, kittykitsche, NatesNoods, ElMundoDeHades, crabler, ArgentAglets, AndryelWolf, 俺的名字就叫彦, DakotaPNW, banjo_pancake, Oraclethegr8, farcry111, benbukafaylaneyapacagim, M_Cloven, valismid, riseshin3, EndlessRiver1, yourloveablecustard, HeyItsAnn_, SwedenOfficial, sjavdkdvshdv and Bioclip: 1 messages each</li>
 </ol>
 </div>
 </div>
-<h4>5548 Total messages Logged from 213 Chat Participants</h4>
+<h4>16593 Total messages Logged from 327 Chat Participants Over 12 Streams</h4>
     <footer>
         <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023-2024)</p>
