--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -28,6 +28,7 @@
             <div class="dropdown">
                 <a href="#archive">Archives</a>
                 <div class="dropdown-content">
+					<a href="/stats/archive/may24.html">May 2024</a>
 					<a href="/stats/archive/apr24.html">April 2024</a>
 					<a href="/stats/archive/mar24.html">March 2024</a>
 					<a href="/stats/archive/feb24.html">February 2024</a>
